/*
 * $Id$
 */

2010-12-16 16:20 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/raddox/TField.prg
     ! Fixed to not convert to uppercase field ::IsMasterFieldComponent

  *  wxharbour.spec
     * changed release to 3

2010-12-07 07:49 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  demos/AddressBook/AddressBook.prg
  *  demos/AddressBook/Tbl_Common.prg
     ! Fixes on Add/Edit records
       ( thanks to Marco Bra to pointing this )

  *  src/raddox/TField.prg
     ! Fixed to check for primary key on ::PrimaryIndexList hash list

2010-12-03 12:20 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  ChangeLog
     * minor cleanup

  *  samples/menu/menu.prg
     * updated sample
       TODO: Check why in Linux is not working ESC key when there is a wxID_CANCEL/wxID_OK
       button, also why are different Open/Open2 versions of creating dialogs, one "Open"
       doesn't allow to close with "X" button on window.

2010-12-03 09:11 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/common/wx_harbour.cpp
     ! Fixed sample wxget, it needs undocumented function wxIsprint()
       Thanks to Marco (marco bra) for reporting it

  *  src/raddox/TField.prg
     ! Fixed TObjectField:GetReferenceField to return proper key field
       for linked table

2010-11-30 13:31 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  demos/dbExplorer/dbExplorer.prg
     * added request to HB_NumToHex function

  *  src/raddox/TField.prg
     ! Fixed converting to index expression an integer value

2010-11-24 10:14 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/raddox/TTable.prg
     * renamed "Database" to "Table"

2010-11-24 09:31 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/xho_classes.h
  *  src/common/xho_classes.cpp
     % added 2nd parameter to xho_itemListGet_XHO function to validate
       for a sz class name required
     % ditto from above for the xho_par_XhoObject function
